--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,8 +1,8 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+// Kaldi logo brand color:  #9933cc
+$kaldi-red: #9933cc
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
@@ -57,15 +57,15 @@ $black: #2b2523
     font-size: 18px
     font-size: 1rem
     line-height: 1.25
-    background-color: #fff
+    background-color: #ffcc00
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #fff
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
-    -webkit-transition: all .15s ease
+    -webkit-box-shadow: inset 0 0 0 2px #fff
+    box-shadow: inset 0 0 0 2px #9933cc
+    -webkit-transition: all .15s ease 
     transition: all .15s ease
 
 .margin-top-0
