--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,5 +1,5 @@
 @import "~bulma/sass/utilities/initial-variables"
-
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap')
 // Config vars
 // Kaldi logo brand color:  #9933cc
 $kaldi-red: #9933cc
@@ -8,7 +8,10 @@ $kaldi-red-invert: #131313
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 $body-color: #131313
-$black: #131313
+$black: rgb(255, 240, 102)
+
+div .navbar
+  background-color: rgb(255, 240, 102)
 
 .navbar .navbar-menu
   box-shadow: none !important
@@ -57,14 +60,14 @@ $black: #131313
   font-size: 18px
   font-size: 1rem
   line-height: 1.25
-  background-color: #ffcc00
+  background-color: rgb(255, 240, 102)
   border-radius: .25rem
   text-decoration: none
   font-weight: 700
-  color: #333
+  color: #9933cc
   text-align: center
   -webkit-box-shadow: inset 0 0 0 2px #333
-  box-shadow: inset 0 0 0 2px #9933cc
+  box-shadow: inset 0 0 0 2px #9933ccd3
   -webkit-transition: all .15s ease
   transition: all .15s ease
 
@@ -73,6 +76,9 @@ $black: #131313
 
 .navbar-item .icon
   color: $primary
+a.navbar-item:hover
+  background-color: #9933cc !important
+
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
   width: 1.5rem
@@ -80,6 +86,7 @@ $black: #131313
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
+
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
@@ -113,13 +120,15 @@ $menu-label-color: #9933cc
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033
+  background-color: #fff066c2
 .blog-list-item header
   display: flex
   margin-bottom: 1em
 .blog-list-item .featured-thumbnail
   flex-basis: 35%
   margin: 0 1.5em 0 0
+.title
+  text-decoration: none !important
 
 @import "~bulma"
 
