fix-navbar-text, changed color to theme and added 105% fontsize increase

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -76,6 +76,11 @@ div .navbar
 
 .navbar-item .icon
   color: $primary
+
+.nav-text
+  color: purple
+.nav-text:hover
+  font-size: 105%
 a.navbar-item:hover
   background-color: #600473 !important
 
