--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -83,7 +83,8 @@ div .navbar
   font-size: 105%
 a.navbar-item:hover
   background-color: #600473 !important
-
+.navbar-start
+  text-align: right
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
   width: 1.5rem
@@ -134,6 +135,9 @@ $menu-label-color: #600473
   margin: 0 1.5em 0 0
 .title
   text-decoration: none !important
+
+div iframe
+  max-width: -webkit-fill-available
 
 @import "~bulma"
 
